Added sonar to project -> ran check and improved code smells and security risks